<resources>
    <string name="app_name">AvitoFilms</string>
    <string name="empty_search_message">Ничего не найдено, попробуйте снова</string>
    <string name="search_text">Поиск:</string>
    <string name="movie_year">Год выпуска:</string>
    <string name="movie_slogan">Слоган:</string>
    <string name="movies_rating">Рейтинг Кинопоиска:</string>
    <string name="movie_length">Продолжительность(в минутах):</string>
    <string name="movie_age_rating">Возрастной рейтинг:</string>
    <string name="movies_genres">Жанры:</string>
    <string name="movies_countries">Страны:</string>
    <string name="movies_budget">Бюджет:</string>
    <string name="list_load_error">При загрузке списка возникла ошибка, проверьте сеть и попробуйте обновить список</string>
    <string name="network_error_message">Нет подключения к сети</string>
    <string name="toast_load_error_message">Ошибка загрузки</string>
    <string name="filter_fab_description">Настройки фильрации</string>
    <string name="sort_filter_description">Сортировать по</string>
    <string name="by_year">Году</string>
    <string name="by_country">Стране</string>
    <string name="by_age">Возрастному рейтингу</string>
    <string name="use_filter_button_text">Показать</string>
    <string name="show_all">Все</string>
    <string name="show_movies">Фильмы</string>
    <string name="show_tv_series">Сериалы</string>
    <string name="show_by_type_description">Показывать</string>
    <string name="slider_description_text">Рейтинг</string>
    <string name="slider_description">Слайдер для рейтинга</string>
    <string name="year_tag">YEAR</string>
    <string name="country_tag">COUNTRY</string>
    <string name="agerating_tag">AGE_RATING</string>
    <string name="filtered_list_description">Результаты</string>
    <string name="comment_description">Отзыв</string>
    <string name="movie_poster_description">Постер фильма</string>
    <string name="retry_button_text">Обновить</string>
    <string name="back_button_description">Кнопка назад</string>
    <string name="error_default_message">Что-то пошло не так! Попробуйте обновиться.</string>
    <string name="movie_description_comments_title">Отзывы пользователей:</string>
    <string name="movie_description_actors_title">Актерский состав:</string>
    <string name="close_comment_button_description">Закрыть отзыв</string>
    <string name="error_image_description">Картинка ошибки</string>
    <string name="default_filters_button_text">Сбросить</string>
    <string name="empty_comments_stub_text">Нет информации об отзывах</string>
    <string name="empty_actors_stub_text">Нет информации об актерах</string>
    <string name="filters_title_text">Фильтры</string>
    <string name="retry_toast_text">Что-то не так! Пробуем снова.</string>
</resources>