<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sortTypeFilterDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/filter_description_margin"
        android:text="@string/show_by_type_description"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tabMoviesTypeFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabMoviesTypeFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortTypeFilterDescription"
        app:layout_constraintBottom_toTopOf="@+id/sortFilterDescription">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@string/all_tag"
            android:text="@string/show_all" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@string/movie_tag"
            android:text="@string/show_movies" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@string/tv_series_tag"
            android:text="@string/show_tv_series" />

    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/sortFilterDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/filter_description_margin"
        android:text="@string/sort_filter_description"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintTop_toBottomOf="@+id/tabMoviesTypeFilter"
        app:layout_constraintBottom_toTopOf="@+id/tabSortMoviesFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabSortMoviesFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ratingSliderDescription"
        app:layout_constraintTop_toBottomOf="@+id/sortFilterDescription">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_year"
            android:tag="@string/year_tag"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_country"
            android:tag="@string/country_tag"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_age"
            android:tag="@string/agerating_tag"/>
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/ratingSliderDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/filter_description_margin"
        android:text="@string/slider_description_text"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintTop_toBottomOf="@+id/tabSortMoviesFilter"
        app:layout_constraintBottom_toTopOf="@+id/ratingSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/ratingSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/slider_description"
        android:valueFrom="0"
        android:valueTo="10"
        android:stepSize="1.0"
        app:values="@array/initial_slider_values"
        app:layout_constraintTop_toBottomOf="@+id/ratingSliderDescription"
        app:layout_constraintBottom_toTopOf="@+id/filterButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_filter_button_text"
        app:layout_constraintTop_toBottomOf="@+id/ratingSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>